--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -16,6 +16,7 @@
       <h1 class="main-title">
         Gallery
       </h1>
+      <ul class="gallery"></ul>
       <a class="back-link" href="./index.html">Go back</a>
 
     </div>
