--- a/src/2-form.html
+++ b/src/2-form.html
@@ -16,6 +16,19 @@
       <h1 class="main-title">
         Form
       </h1>
+
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
+
       <a class="back-link" href="./index.html">Go back</a>
     </div>
   </main>
